<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context="CalendarFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/holo_orange_light"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="9"
            app:srcCompat="@drawable/coin" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="center"
            android:text="@string/T1"
            android:textColor="@color/black"
            android:textSize="34dp"
            android:textStyle="bold"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv2"
        android:textColor="#000"
        android:textSize="34dp"
        android:textStyle="bold"/>

    <View

        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/tv5"
            android:textColor="#000"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/tv6"
            android:textColor="#000"
            android:textSize="34sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <View

        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tv3"
            android:textColor="#000"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/iv2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@android:color/transparent"
            app:srcCompat="@android:drawable/ic_menu_add" />


    </LinearLayout>

    <View

        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

</LinearLayout>